project (
        'cpp',
        ['cpp'],
        default_options : [
                'cpp_std=c++20',
                'buildtype=release',
        ]
)

executable (
    'run-cpp',
    sources: [
        'run-cpp.cpp',
    ],
    include_directories : ['../../output'],
    link_with    : [],
    dependencies : []
)
